<resources>
    <string name="app_name">Practica1</string>
    <string name="inicio">Inicio</string>
    <string name="consumo">Consumo</string>
    <string name="descubre">Descubre</string>
    <string name="mis_productos">Mis Productos</string>
    <string name="gestiones">Gestiones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facturas">Facturas</string>
    <string name="boton_de_filtro">Boton de filtro</string>
</resources>